--- a/platformio.ini
+++ b/platformio.ini
@@ -13,3 +13,8 @@ platform = teensy
 board = teensy40
 framework = arduino
 build_type = release
+monitor_speed = 9600
+lib_deps =
+	adafruit/Adafruit NeoPixel@^1.10.5
+	adafruit/Adafruit Soundboard library@^1.1.0
+	chris--a/Keypad@^3.1.1
