--- a/platformio.ini
+++ b/platformio.ini
@@ -8,8 +8,8 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:nano]
-board = nanoatmega328new
+[env:micro]
+board = micro
 framework = arduino
 platform = atmelavr
 monitor_speed = 115200
@@ -17,3 +17,13 @@ lib_deps =
 	adafruit/Adafruit NeoPixel@^1.10.5
 	adafruit/Adafruit Soundboard library@^1.1.0
 	chris--a/Keypad@^3.1.1
+;[env:nano]
+;board = nanoatmega328new
+;framework = arduino
+;platform = atmelavr
+;monitor_speed = 115200
+;lib_deps =
+;	adafruit/Adafruit NeoPixel@^1.10.5
+;	adafruit/Adafruit Soundboard library@^1.1.0
+;	chris--a/Keypad@^3.1.1
+;
